include/electionguard/manifest.h

/**
 * Data entity used to represent multi-national text. Use when text on a ballot contains multi-national text.
 * See: https://developers.google.com/elections-data/reference/internationalized-text
 */
typedef struct eg_internationalized_text_s eg_internationalized_text_t;
/*
* A BallotStyle works as a key to uniquely specify a set of contests. See also `ContestDescription`.
*
* For ElectionGuard, each contest is associated with a specific geopolitical unit,
* and each ballot style is associated with at least one geopolitical unit.
*
* It is up to the consuming application to determine how to interpreit the relationships
* between these entity types.
*/
typedef struct eg_ballot_style_s eg_ballot_style_t;
EG_API eg_electionguard_status_t eg_ballot_style_get_geopolitical_unit_id_at_index(
  eg_ballot_style_t *handle, uint64_t in_index, char **out_geopolitical_unit_id);
EG_API uint64_t eg_ballot_style_get_party_ids_size(eg_ballot_style_t *handle);
EG_API eg_electionguard_status_t eg_ballot_style_get_party_id_at_index(eg_ballot_style_t *handle,
                                                                       uint64_t in_index,
                                                                       char **out_party_id);
EG_API eg_electionguard_status_t eg_ballot_style_get_image_uri(eg_ballot_style_t *handle,
                                                               const char **out_image_uri);
/**
 * A hash representation of the object. Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_ballot_style_crypto_hash(eg_ballot_style_t *handle,
                                                             eg_element_mod_q_t **out_crypto_hash);
/*
* Use this entity to describe a political party that can then be referenced from other entities.
*
* It is not required to define a party for Electionguard.
*
* See: https://developers.google.com/elections-data/reference/party
*/
typedef struct eg_party_s eg_party_t;
EG_API eg_electionguard_status_t eg_party_new(char *in_object_id, eg_party_t **out_handle);
// TODO: string in params should all be const i think

EG_API eg_electionguard_status_t eg_party_new_with_extras(char *in_object_id,
                                                          eg_internationalized_text_t *in_name,
                                                          char *in_abbreviation, char *in_color,
                                                          char *in_logo_uri,
                                                          eg_party_t **out_handle);
EG_API eg_electionguard_status_t eg_party_free(eg_party_t *handle);
EG_API eg_electionguard_status_t eg_party_get_object_id(eg_party_t *handle,
                                                        const char **out_object_id);
EG_API eg_electionguard_status_t eg_party_get_abbreviation(eg_party_t *handle,
                                                           const char **out_abbreviation);
EG_API eg_electionguard_status_t eg_party_get_name(eg_party_t *handle,
                                                   eg_internationalized_text_t **out_name_ref);
EG_API eg_electionguard_status_t eg_party_get_color(eg_party_t *handle, const char **out_color);
EG_API eg_electionguard_status_t eg_party_get_logo_uri(eg_party_t *handle,
                                                       const char **out_logo_uri);
/**
 * A hash representation of the object. Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_party_crypto_hash(eg_party_t *handle,
                                                      eg_element_mod_q_t **out_crypto_hash);
/*
* Entity describing information about a candidate in a contest.
* See: https://developers.google.com/elections-data/reference/candidate
*
* Note: The ElectionGuard Data Spec deviates from the NIST model in that
* selections for any contest type are considered a "candidate".
* for instance, on a yes-no referendum contest, two `candidate` objects
* would be included in the model to represent the `affirmative` and `negative`
* selections for the contest.  See the wiki, readme's, and tests in this repo for more info.
*/
typedef struct eg_candidate_s eg_candidate_t;
EG_API eg_electionguard_status_t eg_candidate_new(char *in_object_id, bool in_is_write_in,
                                                  eg_candidate_t **out_handle);
// TODO: string in params should all be const i think

EG_API eg_electionguard_status_t eg_candidate_new_with_party(char *in_object_id, char *in_party_id,
                                                             bool in_is_write_in,
                                                             eg_candidate_t **out_handle);
EG_API eg_electionguard_status_t eg_candidate_new_with_extras(char *in_object_id,
                                                              eg_internationalized_text_t *in_name,
                                                              char *in_party_id, char *in_image_uri,
                                                              bool in_is_write_in,
                                                              eg_candidate_t **out_handle);
EG_API eg_electionguard_status_t eg_candidate_free(eg_candidate_t *handle);
EG_API eg_electionguard_status_t eg_candidate_get_object_id(eg_candidate_t *handle,
                                                            const char **out_object_id);
EG_API eg_electionguard_status_t eg_candidate_get_candidate_id(eg_candidate_t *handle,
                                                               const char **out_candidate_id);
EG_API eg_electionguard_status_t eg_candidate_get_name(eg_candidate_t *handle,
                                                       eg_internationalized_text_t **out_name_ref);
EG_API eg_electionguard_status_t eg_candidate_get_party_id(eg_candidate_t *handle,
                                                           const char **out_party_id);
EG_API eg_electionguard_status_t eg_candidate_get_image_uri(eg_candidate_t *handle,
                                                            const char **out_image_uri);
EG_API bool eg_candidate_get_is_write_in(eg_candidate_t *handle);
/**
 * A hash representation of the object. Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_candidate_crypto_hash(eg_candidate_t *handle,
                                                          eg_element_mod_q_t **out_crypto_hash);
/**
 * Data entity for the ballot selections in a contest,
 * for example linking candidates and parties to their vote counts.
 * See: https://developers.google.com/elections-data/reference/ballot-selection
 *
 * Note: The ElectionGuard Data Spec deviates from the NIST model in that
 * there is no difference for different types of selections.
 *
 * The ElectionGuard Data Spec deviates from the NIST model in that
 * `sequence_order` is a required field since it is used for ordering selections
 * in a contest to ensure various encryption primitives are deterministic.
 * For a given election, the sequence of selections displayed to a user may be different
 * however that information is not captured by default when encrypting a specific ballot.
 */
typedef struct eg_selection_description_s eg_selection_description_t;
EG_API eg_electionguard_status_t
eg_selection_description_new(const char *in_object_id, const char *in_candidate_id,
                             uint64_t in_sequence_order, eg_selection_description_t **out_handle);
EG_API eg_electionguard_status_t eg_selection_description_free(eg_selection_description_t *handle);
/**
 * Unique internal identifier that's used by other elements to reference this element.
 */
EG_API eg_electionguard_status_t eg_selection_description_get_object_id(
  eg_selection_description_t *handle, const char **out_object_id);
/**
 * the object id of the candidate
 */
EG_API eg_electionguard_status_t eg_selection_description_get_candidate_id(
  eg_selection_description_t *handle, const char **out_candidate_id);
/**
 * The sequence order defining this selections place in the contest selection collection.
 * Note: this is specifically for programs to interpret and does not necessarily represent
 * the order in which selections are presented to a user.
 */
EG_API uint64_t eg_selection_description_get_sequence_order(eg_selection_description_t *handle);
/**
 * A hash representation of the object
 */
EG_API eg_electionguard_status_t eg_selection_description_crypto_hash(
  eg_selection_description_t *handle, eg_element_mod_q_t **out_crypto_hash);