bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs


            [DllImport(DllName, EntryPoint = "eg_ballot_style_get_geopolitical_unit_id_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetGeopoliticalInitIdAtIndex(
                BallotStyleHandle handle,
                ulong index,
                out IntPtr gpUnitId);

            [DllImport(DllName, EntryPoint = "eg_ballot_style_get_party_ids_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetPartyIdsSize(
                BallotStyleHandle handle);

            [DllImport(DllName, EntryPoint = "eg_ballot_style_get_party_id_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetPartyIdAtIndex(
                BallotStyleHandle handle,
                ulong index,
                out IntPtr partyId);

            [DllImport(DllName, EntryPoint = "eg_ballot_style_get_image_uri",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetImageUri(
                BallotStyleHandle handle, out IntPtr imageUri);

            [DllImport(DllName, EntryPoint = "eg_ballot_style_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                BallotStyleHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);
        }

        #endregion

        #region Party

        internal static class Party
        {
            internal struct PartyType { };

            internal class PartyHandle
                : ElectionGuardSafeHandle<PartyType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = Party.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"Party Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_party_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                out PartyHandle handle);

            [DllImport(DllName, EntryPoint = "eg_party_new_with_extras",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                InternationalizedText.InternationalizedTextHandle name,
                [MarshalAs(UnmanagedType.LPStr)] string abbreviation,
                [MarshalAs(UnmanagedType.LPStr)] string color,
                [MarshalAs(UnmanagedType.LPStr)] string logoUri,
                out PartyHandle handle);

            [DllImport(DllName, EntryPoint = "eg_party_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(PartyType* handle);

            [DllImport(DllName, EntryPoint = "eg_party_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                PartyHandle handle, out IntPtr objectId);

            [DllImport(DllName, EntryPoint = "eg_party_get_abbreviation",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetAbbreviation(
                PartyHandle handle, out IntPtr abbreviation);

            [DllImport(DllName, EntryPoint = "eg_party_get_name",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetName(
                PartyHandle handle, out InternationalizedText.InternationalizedTextHandle name);

            [DllImport(DllName, EntryPoint = "eg_party_get_color",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetColor(
                PartyHandle handle, out IntPtr color);

            [DllImport(DllName, EntryPoint = "eg_party_get_logo_uri",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetLogoUri(
                PartyHandle handle, out IntPtr logoUri);

            [DllImport(DllName, EntryPoint = "eg_party_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                PartyHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);
        }

        #endregion

        #region Candidate

        internal static class Candidate
        {
            internal struct CandidateType { };

            internal class CandidateHandle
                : ElectionGuardSafeHandle<CandidateType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = Candidate.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"Candidate Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_candidate_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                bool isWriteIn,
                out CandidateHandle handle);

            [DllImport(DllName, EntryPoint = "eg_candidate_new_with_party",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string partyId,
                bool isWriteIn,
                out CandidateHandle handle);

            [DllImport(DllName, EntryPoint = "eg_candidate_new_with_extras",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                InternationalizedText.InternationalizedTextHandle name,
                [MarshalAs(UnmanagedType.LPStr)] string partyId,
                [MarshalAs(UnmanagedType.LPStr)] string imageUri,
                bool isWriteIn,
                out CandidateHandle handle);

            [DllImport(DllName, EntryPoint = "eg_candidate_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(CandidateType* handle);

            [DllImport(DllName, EntryPoint = "eg_candidate_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                CandidateHandle handle, out IntPtr objectId);

            [DllImport(DllName, EntryPoint = "eg_candidate_get_candidate_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetCandidateId(
                CandidateHandle handle, out IntPtr candidateId);

            [DllImport(DllName, EntryPoint = "eg_candidate_get_name",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetName(
                CandidateHandle handle, out InternationalizedText.InternationalizedTextHandle name);

            [DllImport(DllName, EntryPoint = "eg_candidate_get_party_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetPartyId(
                CandidateHandle handle, out IntPtr partyId);

            [DllImport(DllName, EntryPoint = "eg_candidate_get_image_uri",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetImageUri(
                CandidateHandle handle, out IntPtr imageUrl);

            [DllImport(DllName, EntryPoint = "eg_candidate_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                CandidateHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);

            [DllImport(DllName, EntryPoint = "eg_candidate_get_is_write_in",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern bool GetIsWriteIn(CandidateHandle handle);
        }

        #endregion

        #region SelectionDescription

        internal static class SelectionDescription
        {
            internal struct SelectionDescriptionType { };

            internal class SelectionDescriptionHandle
                : ElectionGuardSafeHandle<SelectionDescriptionType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = SelectionDescription.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"SelectionDescription Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_selection_description_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string candidateId,
                ulong sequenceOrder,
                out SelectionDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_selection_description_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(SelectionDescriptionType* handle);

            [DllImport(DllName, EntryPoint = "eg_selection_description_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                SelectionDescriptionHandle handle, out IntPtr objectId);

            [DllImport(DllName, EntryPoint = "eg_selection_description_get_candidate_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetCandidateId(
                SelectionDescriptionHandle handle, out IntPtr candidateId);

            [DllImport(DllName, EntryPoint = "eg_selection_description_get_sequence_order",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetSequenceOrder(
                SelectionDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_selection_description_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                SelectionDescriptionHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);
        }

        #endregion
